Add minimal search (#202)
* Add minimal search

* Regenerate client

* Rename search methods

* Add example for search
